--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+.joinBtn {
+    background-color: black;
+    border-radius: 5px;
+    color: white;
+}
+button#btn.joinBtn{
+	border: 0px none rgb(255, 255, 255);
+}
+.joinBtn:hover {
+    background-color: yellow;
+	border-radius: 30px;
+	color: black
+}
